<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBG"
    tools:context="com.example.suriya.firebasepushnotification.activity.LoginActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/welcome"
        android:textColor="@color/mainTextFC"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvWelcome"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_background"
        android:hint="@string/email"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/editPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editEmail"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editPass"
        android:layout_marginTop="22dp"
        android:background="@drawable/login_background"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/login"
        android:textAllCaps="false"/>

    <com.rilixtech.materialfancybutton.MaterialFancyButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        fancy:mfb_borderColor="@color/mainTextFC"
        fancy:mfb_borderWidth="1dp"
        fancy:mfb_defaultColor="@color/mainBG"
        fancy:mfb_focusColor="@color/colorPrimaryDark"
        fancy:mfb_radius="30dp"
        fancy:mfb_text="@string/register"
        fancy:mfb_textSize="16sp" />

</RelativeLayout>
