<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:circle="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBG"
    tools:context="com.example.suriya.firebasepushnotification.activity.RegisterActivity">

    <TextView
        android:id="@+id/tvCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/create_a_new_accocunt"
        android:textColor="@color/mainTextFC"
        android:textSize="20sp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgGelery"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/tvCreate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_gallery"
        app:civ_border_width="1dp"
        app:civ_border_color="@color/mainTextFC"/>/>

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgGelery"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_background"
        android:hint="@string/name"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editName"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_background"
        android:hint="@string/email"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/editPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editEmail"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:imeOptions="actionDone" />

    <Button
        android:id="@+id/btnSingUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editPass"
        android:layout_marginTop="22dp"
        android:background="@drawable/login_background"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/sing_up"
        android:textAllCaps="false"/>

    <com.rilixtech.materialfancybutton.MaterialFancyButton
        android:id="@+id/btnBacktoLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSingUp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        fancy:mfb_borderColor="@color/mainTextFC"
        fancy:mfb_borderWidth="1dp"
        fancy:mfb_defaultColor="@color/mainBG"
        fancy:mfb_focusColor="@color/colorPrimaryDark"
        fancy:mfb_radius="30dp"
        fancy:mfb_text="@string/back_to_login"
        fancy:mfb_textSize="16sp" />

</RelativeLayout>
